// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SharedWithRow should match default snapshot 1`] = `
.c0 {
  border-bottom: 1px solid;
  border-top: unset;
  border-color: #c0cfde;
  padding: 10px 0;
  min-height: 70px;
}

.c0:nth-child(2) {
  border-top: 1px solid #c0cfde;
}

<div
  className="c0"
/>
`;

exports[`SharedWithRow should match snapshot when is first element 1`] = `
.c0 {
  border-bottom: 1px solid;
  border-top: 1px solid #c0cfde;
  border-color: #c0cfde;
  padding: 10px 0;
  min-height: 70px;
}

.c0:nth-child(2) {
  border-top: 1px solid #c0cfde;
}

<div
  className="c0"
/>
`;

exports[`SharedWithRow should match snapshot when requested is true 1`] = `
.c0 {
  border-bottom: 1px solid;
  border-top: unset;
  border-color: #5700b5;
  padding: 10px 0;
  min-height: 70px;
}

.c0:nth-child(2) {
  border-top: 1px solid #5700b5;
}

<div
  className="c0"
/>
`;
